# fff.nvim

./: Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: release.yaml
crates/fff-c/include/: fff.h
crates/fff-c/src/: ffi_types.rs  lib.rs
crates/fff-client/: Cargo.toml
crates/fff-client/src/: lib.rs
crates/fff-core/: Cargo.toml
crates/fff-core/src/: background_watcher.rs  constraints.rs  file_picker.rs  grep.rs  lib.rs  score.rs  simd_path.rs  types.rs
crates/fff-core/tests/: bigram_overlay_coherence_test.rs  bigram_overlay_integration.rs  fuzz_file_operations.rs  grep_integration.rs  new_directory_watcher_test.rs
crates/fff-daemon/: Cargo.toml
crates/fff-daemon/src/: handler.rs  main.rs  state.rs
crates/fff-daemon/tests/: daemon_integration_test.rs
crates/fff-mcp/src/: output.rs  server.rs
crates/fff-nvim/: Cargo.toml
crates/fff-nvim/benches/: indexing_and_search.rs
crates/fff-nvim/src/: daemon_mode.rs  lib.rs  lua_types.rs
crates/fff-protocol/: Cargo.toml
crates/fff-protocol/src/: lib.rs
doc/: fff.nvim.txt
docs/: architecture-report.md  daemon-feasibility.md  domain-mapping.md  performance-report.md
lua/fff/: conf.lua  core.lua  download.lua  fuzzy.lua  health.lua  picker_ui.lua
lua/fff/rust/: init.lua
tests/: on_select_spec.lua  picker_dir_resolution_spec.lua
