[package]
name = "fff-daemon"
version = "0.1.0"
edition = "2021"
description = "Daemon process for fff file search — indexes directories and serves search requests over Unix domain socket"

[[bin]]
name = "fff-daemon"
path = "src/main.rs"

[dependencies]
fff = { package = "fff-search", path = "../fff-core", features = ["mimalloc-collect"] }
fff-protocol = { path = "../fff-protocol" }
fff-query-parser = { workspace = true }
git2 = { workspace = true }
mimalloc = { workspace = true }
tokio = { version = "1", features = ["full"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
